[package]
name = "cuda"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "cuda"
path = "src/main.rs"

[features]
gpu = []

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.16"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
core_affinity = "0.8.1"


drillx = { path = "./drillx/drillx", features = ["gpu"] }
#drillx = { version = "^2.0.0", features = ["gpu"] }


futures = "0.3.30"
indicatif = "0.17.8"
num_cpus = "1.16.0"
ore-api = "2.1.0"
ore-utils = "2.1.0"
rand = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
serde_json = "1.0"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
    "no-entrypoint",
] }
tokio = "1.35.1"
url = "2.5"
tokio-tungstenite = "0.16"
serde = { version = "1.0", features = ["derive"] }
num_enum = { version = "*" }
